# claw-fleet

./: .gitignore  CLA.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  skills-lock.json  tray.html  vite.config.ts
.github/workflows/: ci.yml  mobile.yml  notarize.yml  release.yml
claw-fleet-core/: Cargo.toml
claw-fleet-core/examples/: seed_llm_usage.rs
claw-fleet-core/src/: agent_source.rs  audit.rs  auto_resume.rs  backend.rs  claude_analyze.rs  claude_binary.rs  claude_source.rs  codex_source.rs  consumer_heartbeat.rs  cursor.rs  daily_report.rs  decision_history.rs  elicitation.rs  feishu.rs  guard.rs  hooks.rs  interaction_mode.rs  jsonl_tail.rs  lib.rs  llm_provider.rs  llm_usage.rs  model_cost.rs  openclaw_source.rs  plan_approval.rs  rate_limit_parser.rs  session.rs  session_todos.rs  skill_history.rs  skills.rs
claw-fleet-core/testdata/: gen_reset_time_golden.js  reset_time_golden.jsonl
claw-fleet-desktop/: Cargo.toml  decision-float.html  preview.html  settings.html  tauri.conf.json  vite.config.ts
claw-fleet-desktop/app/: App.css  App.tsx  DecisionFloatApp.tsx  PreviewApp.module.css  PreviewApp.tsx  SettingsApp.tsx  audio.ts  contextMenu.ts  decision-float-main.tsx  main.tsx  overlay-main.tsx  preview-main.tsx  settings-main.tsx  storage.ts  store.ts  types.ts  usageStore.ts
claw-fleet-desktop/app/components/: AuditView.module.css  AuditView.tsx  ConnectionDialog.tsx  CostSpeedChart.tsx  DecisionHistory.module.css  DecisionHistory.tsx  DecisionPanel.module.css  DecisionPanel.tsx  GalleryView.tsx  LiteApp.module.css  LiteApp.tsx  LiteDecisionHistory.module.css  LiteDecisionHistory.tsx  LiteSessionCard.module.css  LiteSessionCard.tsx  MascotAlertBubble.module.css  MascotAlertBubble.tsx  MascotEyes.module.css  MascotEyes.tsx  MemoryView.module.css  MemoryView.tsx  MessageList.module.css  MessageList.tsx  MobileAccessPanel.module.css  MobileAccessPanel.tsx  Onboarding.module.css  Onboarding.tsx  OverlayMascot.module.css  RobotFrame.tsx  SessionCard.module.css  SessionCard.tsx  SessionDetail.module.css  SessionDetail.tsx  SessionList.module.css  SessionList.tsx  SettingsPanel.module.css  SettingsPanel.tsx  SkillHistory.module.css  SkillHistory.tsx  SkillsView.module.css  (+10 more)
claw-fleet-desktop/app/components/blocks/: CompactSummaryBlock.module.css  CompactSummaryBlock.tsx  DiffView.module.css  DiffView.tsx  TextBlock.module.css  TextBlock.tsx  ToolUseBlock.module.css  ToolUseBlock.tsx
claw-fleet-desktop/app/components/report/: MetricsCards.tsx
claw-fleet-desktop/app/hooks/: useDecisionEvents.ts  useDecisionPeerSync.ts  useUsageRing.ts
claw-fleet-desktop/app/locales/: en.json  zh.json
claw-fleet-desktop/app/markdown/: markdown.module.css  safeLinks.tsx
claw-fleet-desktop/app/mock/: data.ts  tauri-mock.ts
claw-fleet-desktop/capabilities/: decision-float.json  preview.json  settings.json
claw-fleet-desktop/src/: app_nap.rs  embedded_server.rs  gui.rs  lib.rs  local_backend.rs  region.rs  remote.rs  tunnel.rs
claw-fleet-mobile/: app.json  package-lock.json  package.json
claw-fleet-mobile/app/: index.tsx
claw-fleet-mobile/app/(tabs)/: _layout.tsx
claw-fleet-mobile/src/: notifications.ts  types.ts
claw-fleet-mobile/src/api/: client.ts  mock-client.ts  sse.ts
claw-fleet-mobile/src/components/: DecisionPanel.tsx
claw-fleet-mobile/src/locales/: en.json  zh.json
claw-fleet-mobile/src/stores/: decisions.ts
design/: feishu-integration.md
docs/: index.html
fleet-cli/src/: main.rs
fleet-cli/src/feishu/: bot.rs  card.rs  client.rs  mod.rs  oauth.rs
fleet-cli/tests/: sse_dismiss.rs
scripts/: build-local.sh  compress-images.sh  debug-mock.mjs  generate-icons.sh  take-screenshots.mjs
skills/fleet/: SKILL.md
src/: App.css  App.tsx  OverlayApp.tsx  TrayApp.tsx  audio.ts  i18n.ts  main.tsx  storage.ts  store.ts  tray-main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: audit-patterns.json
src-tauri/src/: account.rs  agent_source.rs  audit.rs  backend.rs  claude_analyze.rs  claude_source.rs  codex_source.rs  cursor.rs  daily_report.rs  hooks.rs  lib.rs  local_backend.rs  main.rs  memory.rs  openclaw_source.rs  pattern_update.rs  remote.rs  search_index.rs  session.rs  skills.rs  tcc.rs  version_check.rs  watcher.rs
src/components/: AccountInfo.module.css  AccountInfo.tsx  AuditView.module.css  AuditView.tsx  ConfirmDialog.module.css  ConfirmDialog.tsx  ConnectionDialog.module.css  ConnectionDialog.tsx  GalleryView.module.css  GalleryView.tsx  HooksBanner.module.css  HooksBanner.tsx  InspectModal.module.css  InspectModal.tsx  LanguageSwitcher.module.css  LanguageSwitcher.tsx  MascotEyes.module.css  MascotEyes.tsx  MemoryPanel.module.css  MemoryPanel.tsx  MessageList.module.css  MessageList.tsx  Onboarding.module.css  Onboarding.tsx  OverlayMascot.module.css  OverlayMascot.tsx  RobotFrame.module.css  RobotFrame.tsx  SessionCard.module.css  SessionCard.tsx  SessionDetail.module.css  SessionDetail.tsx  SessionList.module.css  SessionList.tsx  SessionToolbar.module.css  SessionToolbar.tsx  SettingsPanel.module.css  SettingsPanel.tsx  SkillsPanel.tsx  ThemeToggle.module.css  (+12 more)
src/components/blocks/: TextBlock.module.css  TextBlock.tsx  ThinkingBlock.module.css  ThinkingBlock.tsx  ToolUseBlock.module.css  ToolUseBlock.tsx
src/components/mascot/: OctopusMascot.module.css  OctopusMascot.tsx  index.ts
src/components/report/: AISummaryCard.tsx  ContributionsHeatmap.module.css  ContributionsHeatmap.tsx  HourlyActivityChart.tsx  InsightsTimeline.tsx  LessonsCard.tsx  MetricsCards.tsx  ProjectBreakdown.tsx  ReportShareMenu.tsx  ReportView.module.css  ReportView.tsx  ToolCallChart.tsx
src/hooks/: useSessionSearch.ts
src/locales/: en.json  zh.json
src/mock/: data.ts  tauri-mock.ts
