[package]
name = "claw-fleet-desktop"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "claw_fleet_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claw-fleet-core = { path = "../claw-fleet-core" }

# ── Tauri & GUI ──────────────────────────────────────────────────────────────
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2"
notify = "6"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }

# ── TTS ──────────────────────────────────────────────────────────────────────
msedge-tts = "0.3"
rodio = { version = "0.19", default-features = false, features = ["mp3"] }
# msedge-tts → isahc → curl-sys → openssl-sys; vendored builds OpenSSL from
# source so cross-compiling (e.g. universal macOS binary) doesn't need a
# preinstalled x86_64 OpenSSL on an ARM runner.
openssl = { version = "0.10", features = ["vendored"], optional = true }

# ── Re-used from core (needed directly in desktop modules) ───────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
libc = "0.2"
tiny_http = "0.12"
percent-encoding = "2"

# ── macOS-only: disable App Nap so the consumer-heartbeat thread keeps
# running when Fleet is in the background.  Without this, a backgrounded
# Fleet process gets suspended by the system, the heartbeat goes stale >5s,
# and AskUserQuestion/guard hook CLIs delete the pending request and fall
# back to Claude Code's native UI (user sees DecisionPanel vanish).
# objc2 / objc2-foundation are already pulled in transitively by Tauri;
# declaring them explicitly just lets us call NSProcessInfo.beginActivity.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }

[features]
default = []
# Compile OpenSSL from source — only needed for macOS universal cross-compilation.
vendored-ssl = ["openssl"]
