[package]
name = "claude-fleet"
version = "26.3.28-dev.1774688608"
description = "Claude Fleet - Monitor all Claude sessions"
authors = ["hoveychen"]
license = "AGPL-3.0-only"
edition = "2021"
default-run = "claude-fleet"

[lib]
name = "claude_fleet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fleet-cli"
path = "src/bin/fleet.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
dirs = "5"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
clap = { version = "4", features = ["derive"] }
rfd = "0.15"
tiny_http = "0.12"
percent-encoding = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.31", features = ["bundled"] }
futures = "0.3"
tokio = { version = "1", features = ["rt"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-clipboard-manager = "2.3.2"
zstd = "0.13"
msedge-tts = { version = "0.3", optional = true }
rodio = { version = "0.19", default-features = false, features = ["mp3"], optional = true }

[features]
default = []
tts = ["msedge-tts", "rodio"]

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
